--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "curry-me",
   "author": "Rafael Tureluren <rafaelbeltu@gmail.com>",
-  "description": "Curry function with great IntelliSense.",
+  "description": "A typed curry function with great IntelliSense.",
   "license": "MIT",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -9,7 +9,11 @@
   "scripts": {
     "start": "nodemon src/workbench.ts",
     "test": "NODE_ENV=test jest --watch --detectOpenHandles",
-    "cover": "NODE_ENV=test jest --coverage"
+    "cover": "NODE_ENV=test jest --coverage",
+    "build": "rm -rf build && tsc --build",
+    "lint": "eslint ./src --ext .js,.ts",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run lint"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
