--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,12 +14,7 @@
     "skipLibCheck": true
   },
   "include": ["src"],
-  "exclude": [
-    "node_modules", 
-    "**/*.test.ts",
-    "**/*.spec.ts",
-    "./src/workbench.ts",
-  ],
+  "exclude": ["node_modules"],
   "ts-node": {
     "files": true
   }
