--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/jest": "^27.4.0",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
+    "babel-plugin-replace-ts-export-assignment": "^0.0.2",
     "eslint": "^8.3.0",
     "jest": "^27.4.5",
     "nodemon": "^2.0.15",
